--- a/index.html
+++ b/index.html
@@ -7,8 +7,9 @@
 		</style>
 	</head>
 	<body>
+		
+		<div claa='someText'>the Orientation data!</div>
 		<div class='container'>	</div>
-
 		<script src="jquery-2.1.1.min.js"></script>
 		<script src="three.min.js"></script>
 	    <script src="script.js"> </script>
