--- a/index.html
+++ b/index.html
@@ -4,11 +4,15 @@
 		<style>
 			body { margin: 0; }
 			canvas { width: 100%; height: 100% }
+			.instruction{
+				font-size: 20px;
+			}
 		</style>
 	</head>
 	<body>
-
-		<div class='someText'>the Orientation data!</div>
+		<div class='instruction'>Tilt the laptop or access with your phone at
+			rockzou.github.io/earth_rotate</div>
+		<!-- <div class='someText'>the Orientation data!</div> -->
 		<div class='container'>	</div>
 		<script src="jquery-2.1.1.min.js"></script>
 		<script src="three.min.js"></script>
