add Orbit Control

--- a/index.html
+++ b/index.html
@@ -10,12 +10,14 @@
 		</style>
 	</head>
 	<body>
-		<div class='instruction'>Tilt the laptop or access with your phone at
-			rockzou.github.io/earth_rotate</div>
+		<div class='instruction'>Press Enter to Toggle between Planets</div>
+		<div class='instruction'>Move Mouse for orientation</div>
 		<!-- <div class='someText'>the Orientation data!</div> -->
 		<div class='container'>	</div>
 		<script src="jquery-2.1.1.min.js"></script>
 		<script src="three.min.js"></script>
+
+	    <script src="OrbitControls.js"></script>
 	    <script src="script.js"> </script>
 	</body>
 </html>
